--- a/flashtitle.html
+++ b/flashtitle.html
@@ -24,7 +24,7 @@ document.addEventListener("visibilitychange", () => {
     // if page is hidden, set interval to toggle title
     setIntervalID = setInterval(() => {
         flashTitle("Program", "Please come back");
-    }, 500);
+    }, 500);                                        // time interval between every flash
 });
 </script>
 
